[gd_scene load_steps=4 format=3 uid="uid://dwuyg5ovq2brl"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_05uyy"]
[ext_resource type="Script" path="res://panel_container.gd" id="3_2nc7s"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mxa3g"]

[node name="PauseMenu" type="Control"]
process_mode = 3
light_mask = 0
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -1.0
offset_right = -46.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 1.62
script = ExtResource("1_05uyy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.298
anchor_top = 0.735
anchor_right = 0.298
anchor_bottom = 0.735
offset_left = 376.224
offset_top = 206.52
offset_right = 822.224
offset_bottom = 628.52
script = ExtResource("3_2nc7s")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer"]
material = SubResource("CanvasItemMaterial_mxa3g")
layout_mode = 2
theme_override_constants/separation = 25

[node name="Resume" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Resume
"
theme_override_font_sizes/font_size = 15
text = "Resume"

[node name="Restart" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart
"

[node name="Quit" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Go to main menu" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Go to main menu"

[node name="Save" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Settings" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Quest menu" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quest Menu
"

[node name="Go back to cemetery" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Go back to cemetery"

[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/Go to main menu" to="." method="_on_go_to_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/Settings" to="." method="_on_sound_control_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/Quest menu" to="." method="_on_quest_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/Go back to cemetery" to="." method="_on_go_back_to_cemetery_pressed"]
